the name was changed of the API and quit save in influxdb (this had moved to the actual billing)
